--- a/StormWeb/StormWeb.csproj
+++ b/StormWeb/StormWeb.csproj
@@ -557,6 +557,7 @@
   <ItemGroup>
     <Folder Include="obj\Debug\edmxResourcesToEmbed\Models\" />
     <Folder Include="obj\Debug\TempPE\" />
+    <Folder Include="Reports\" />
     <Folder Include="Views\Shared\EditorTemplates\" />
   </ItemGroup>
   <ItemGroup />
@@ -596,10 +597,6 @@
     <None Include="App_Data\Uploads\2_Stewie Griffin\MockUps_CoE_6.pdf" />
     <None Include="App_Data\Uploads\2_Stewie Griffin\MockUps_Offer_Letter_6.pdf" />
     <None Include="App_Data\Uploads\2_Stewie Griffin\Passport_Case.pdf" />
-    <EntityDeploy Include="Models\StormDB.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>StormDB.Designer.cs</LastGenOutput>
-    </EntityDeploy>
     <Content Include="Views\Appointment\Index.cshtml" />
     <Content Include="Views\Appointment\Details.cshtml" />
     <Content Include="Views\Appointment\Create.cshtml" />
@@ -713,8 +710,7 @@
     </Content>
     <Content Include="Views\StudentStaff\NewStudent.cshtml" />
     <Content Include="Views\Help\Index.cshtml" />
-    <Content Include="Views\University\Faculties.cshtml" /> 
-	
+    <Content Include="Views\University\Faculties.cshtml" />
     <Content Include="Views\University\CreateFaculty.cshtml" />
     <Content Include="Views\Account\ActivateStaff.cshtml" />
     <Content Include="Views\University\EditFaculty.cshtml" />
@@ -741,6 +737,10 @@
     <Content Include="Views\Report\Report\RunReport.cshtml" />
     <Content Include="Views\Payment\Index.cshtml" />
     <Content Include="Views\Payment\Create.cshtml" />
+    <EntityDeploy Include="Models\StormDB.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>StormDB.Designer.cs</LastGenOutput>
+    </EntityDeploy>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
