--- a/StormWeb/Web.config
+++ b/StormWeb/Web.config
@@ -6,8 +6,8 @@
 <configuration>
   <connectionStrings>
     <add name="ApplicationServices" connectionString="Data Source=10.10.10.43;Initial Catalog=aspnetdb;Integrated Security=false;User ID=admin;Password=storm2020" providerName="System.Data.SqlClient" />
-    
-  <add name="StormDBEntities" connectionString="metadata=res://*/Models.StromDB.csdl|res://*/Models.StromDB.ssdl|res://*/Models.StromDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=10.10.10.43;Initial Catalog=StormDB;Persist Security Info=True;User ID=admin;Password=storm2020;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="StormDBEntities" connectionString="metadata=res://*/Models.StormDB.csdl|res://*/Models.StormDB.ssdl|res://*/Models.StormDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.10.10.43;initial catalog=StormDB;persist security info=True;user id=admin;password=storm2020;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="1.0.0.0" />
     <add key="ClientValidationEnabled" value="true" />
