Fixed ViewModel for Payment

--- a/StormWeb/StormWeb.csproj
+++ b/StormWeb/StormWeb.csproj
@@ -132,6 +132,7 @@
     <Compile Include="Models\ManageRoleModel.cs" />
     <Compile Include="Models\ModelHelper\DocumentHelper.cs" />
     <Compile Include="Models\ModelHelper\ProgressHelper.cs" />
+    <Compile Include="Models\PaymentViewModel.cs" />
     <Compile Include="Models\ResetPasswordModel.cs" />
     <Compile Include="Models\ClientMD.cs" />
     <Compile Include="Models\ClientViewModel.cs" />
@@ -150,10 +151,10 @@
     <Compile Include="Models\OutboxViewModel.cs" />
     <Compile Include="Models\StaffAppointmentListViewModel.cs" />
     <Compile Include="Models\StaffMD.cs" />
-    <Compile Include="Models\StromDB.Designer.cs">
+    <Compile Include="Models\StormDB.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>StromDB.edmx</DependentUpon>
+      <DependentUpon>StormDB.edmx</DependentUpon>
     </Compile>
     <Compile Include="Models\StudentCentreModel.cs" />
     <Compile Include="Models\StudentModel.cs" />
@@ -531,6 +532,7 @@
     <Content Include="Site\Styles\prettify.css" />
     <Content Include="Site\Styles\prettyPhoto.css" />
     <Content Include="Site\Styles\style.css" />
+    <Content Include="Views\Shared\EditorTemplates\DateTime.ascx" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -558,7 +560,6 @@
     <Folder Include="obj\Debug\edmxResourcesToEmbed\Models\" />
     <Folder Include="obj\Debug\TempPE\" />
     <Folder Include="Reports\" />
-    <Folder Include="Views\Shared\EditorTemplates\" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
@@ -737,9 +738,9 @@
     <Content Include="Views\Report\Report\RunReport.cshtml" />
     <Content Include="Views\Payment\Index.cshtml" />
     <Content Include="Views\Payment\Create.cshtml" />
-    <EntityDeploy Include="Models\StromDB.edmx">
+    <EntityDeploy Include="Models\StormDB.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>StromDB.Designer.cs</LastGenOutput>
+      <LastGenOutput>StormDB.Designer.cs</LastGenOutput>
     </EntityDeploy>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
