Lots of modification
- AWS S3 support
- Separated registration
- Event (buggy)

--- a/StormWeb/StormWeb.csproj
+++ b/StormWeb/StormWeb.csproj
@@ -34,6 +34,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AWSSDK, Version=1.5.6.0, Culture=neutral, PublicKeyToken=cd2d24cd2bace800, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>C:\Program Files (x86)\AWS SDK for .NET\bin\AWSSDK.dll</HintPath>
+    </Reference>
     <Reference Include="EntityFramework">
       <HintPath>..\packages\EntityFramework.4.1.10331.0\lib\EntityFramework.dll</HintPath>
     </Reference>
@@ -128,7 +132,9 @@
     <Compile Include="Models\ActivateAccountModel.cs" />
     <Compile Include="Models\AppointmentMD.cs" />
     <Compile Include="Models\BranchModel.cs" />
+    <Compile Include="Models\CalendarEvent.cs" />
     <Compile Include="Models\DocumentIndexModel.cs" />
+    <Compile Include="Models\EventAppointment.cs" />
     <Compile Include="Models\General_EnquiryMD.cs" />
     <Compile Include="Models\ManageRoleModel.cs" />
     <Compile Include="Models\ModelHelper\Currency.cs" />
@@ -165,13 +171,17 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Data\currency.xml" />
+    <Content Include="ModelBinding\currency.xml" />
     <Content Include="App_Data\Templates\General\th0.jpg" />
+    <Content Include="bin\StormWeb.dll" />
+    <Content Include="bin\StormWeb.pdb" />
     <Content Include="Content\css\bootstrap-clean.css" />
     <Content Include="Content\css\bootstrap-responsive.css" />
     <Content Include="Content\css\bootstrap.css" />
     <Content Include="Content\css\elfinder.min.css" />
     <Content Include="Content\css\elfinder.theme.css" />
+    <Content Include="Content\css\font-awesome-ie7.css" />
+    <Content Include="Content\css\font-awesome.css" />
     <Content Include="Content\css\fullcalendar.css" />
     <Content Include="Content\css\icons-sprite.css" />
     <Content Include="Content\css\ie\ie8.css" />
@@ -341,6 +351,26 @@
     <Content Include="Content\site_img\logo.png" />
     <Content Include="Content\site_img\univ.jpg" />
     <Content Include="Global.asax" />
+    <Content Include="lib\AWS.Extensions.dll" />
+    <Content Include="lib\AWS.Extensions.xml" />
+    <Content Include="lib\AWSSDK.dll" />
+    <Content Include="lib\AWSSDK.xml" />
+    <Content Include="lib\net20\Newtonsoft.Json.dll" />
+    <Content Include="lib\net20\Newtonsoft.Json.xml" />
+    <Content Include="lib\net35\Newtonsoft.Json.dll" />
+    <Content Include="lib\net35\Newtonsoft.Json.xml" />
+    <Content Include="lib\net40\Newtonsoft.Json.dll" />
+    <Content Include="lib\net40\Newtonsoft.Json.xml" />
+    <Content Include="lib\portable-net40+sl4+wp7+win8\Newtonsoft.Json.dll" />
+    <Content Include="lib\portable-net40+sl4+wp7+win8\Newtonsoft.Json.xml" />
+    <Content Include="lib\sl3-wp\Newtonsoft.Json.dll" />
+    <Content Include="lib\sl3-wp\Newtonsoft.Json.xml" />
+    <Content Include="lib\sl4-windowsphone71\Newtonsoft.Json.dll" />
+    <Content Include="lib\sl4-windowsphone71\Newtonsoft.Json.xml" />
+    <Content Include="lib\sl4\Newtonsoft.Json.dll" />
+    <Content Include="lib\sl4\Newtonsoft.Json.xml" />
+    <Content Include="lib\winrt45\Newtonsoft.Json.dll" />
+    <Content Include="lib\winrt45\Newtonsoft.Json.xml" />
     <Content Include="Scripts\accordion.jquery.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\chart\jqplot.barRenderer.min.js" />
@@ -565,6 +595,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="App_Data\Downloads\" />
     <Folder Include="obj\Debug\edmxResourcesToEmbed\Models\" />
     <Folder Include="obj\Debug\TempPE\" />
     <Folder Include="Reports\" />
@@ -751,6 +782,14 @@
       <LastGenOutput>StormDB.Designer.cs</LastGenOutput>
     </EntityDeploy>
     <Content Include="Views\Payment\Edit.cshtml" />
+    <None Include="App_Data\Uploads\Form 101.pdf" />
+    <None Include="App_Data\Uploads\Getting Started0.pdf" />
+    <None Include="App_Data\Uploads\MockUps.pdf" />
+    <Content Include="Views\Document\TestAWS.cshtml" />
+    <Content Include="Views\Document\viewAWS.cshtml" />
+    <Content Include="Views\Client\ChooseRegistration.cshtml" />
+    <Content Include="Views\Client\RegisterContinue.cshtml" />
+    <Content Include="Views\Client\Enquire.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
@@ -769,7 +808,7 @@
         <WebProjectProperties>
           <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>4126</DevelopmentServerPort>
+          <DevelopmentServerPort>2370</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
           <IISUrl>
           </IISUrl>
