--- a/StormWeb/StormWeb.csproj
+++ b/StormWeb/StormWeb.csproj
@@ -36,7 +36,7 @@
   <ItemGroup>
     <Reference Include="AWSSDK, Version=1.5.6.0, Culture=neutral, PublicKeyToken=cd2d24cd2bace800, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Program Files (x86)\AWS SDK for .NET\bin\AWSSDK.dll</HintPath>
+      <HintPath>lib\AWSSDK.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework">
       <HintPath>..\packages\EntityFramework.4.1.10331.0\lib\EntityFramework.dll</HintPath>
@@ -177,8 +177,6 @@
   <ItemGroup>
     <Content Include="ModelBinding\currency.xml" />
     <Content Include="App_Data\Templates\General\th0.jpg" />
-    <Content Include="bin\StormWeb.dll" />
-    <Content Include="bin\StormWeb.pdb" />
     <Content Include="Content\css\bootstrap-clean.css" />
     <Content Include="Content\css\bootstrap-responsive.css" />
     <Content Include="Content\css\bootstrap.css" />
