--- a/StormWeb/Views/Web.config
+++ b/StormWeb/Views/Web.config
@@ -16,6 +16,7 @@
         <add namespace="System.Web.Mvc.Ajax" />
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
+        <add namespace="StormWeb.Helper" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
