--- a/StormWeb/Web.config
+++ b/StormWeb/Web.config
@@ -4,12 +4,10 @@
   http://go.microsoft.com/fwlink/?LinkId=152368
   -->
 <configuration>
-
- <!-- 
+  <!-- 
   <connectionStrings>
-    <add name="ApplicationServices" connectionString="Data Source=10.10.10.43;Initial Catalog=aspnetdb;Integrated Security=false;User ID=admin;Password=storm2020" providerName="System.Data.SqlClient" />
-  <add name="StormDBEntities" connectionString="metadata=res://*/Models.StormDB.csdl|res://*/Models.StormDB.ssdl|res://*/Models.StormDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.10.10.43;initial catalog=StormDB;persist security info=True;user id=admin;password=storm2020;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+    <add name="ApplicationServices" connectionString="Data Source=10.10.10.43;Initial Catalog=StormDB_New;Integrated Security=false;User ID=admin;Password=storm2020" providerName="System.Data.SqlClient" />
+  <add name="StormDBEntities" connectionString="metadata=res://*/Models.StormDB.csdl|res://*/Models.StormDB.ssdl|res://*/Models.StormDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=10.10.10.43;Initial Catalog=StormDB;Persist Security Info=True;User ID=admin;Password=storm2020;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   -->
 
   <connectionStrings>
@@ -27,7 +25,7 @@
     <add key="AWSSecretKey" value="pUpBQoWgGCS5T3oATGF9nJexsNZF61T8ddfnF7gF" />
     <add key="BucketName" value="stormwebstorage" />
   </appSettings>
-  <system.web>
+  <system.web>    
     <httpRuntime requestValidationMode="2.0" />
     <compilation debug="true" targetFramework="4.0">
       <assemblies>
