--- a/StormWeb/Web.config
+++ b/StormWeb/Web.config
@@ -7,7 +7,7 @@
   <!-- 
   <connectionStrings>
     <add name="ApplicationServices" connectionString="Data Source=10.10.10.43;Initial Catalog=StormDB_New;Integrated Security=false;User ID=admin;Password=storm2020" providerName="System.Data.SqlClient" />
-  <add name="StormDBEntities" connectionString="metadata=res://*/Models.StormDB.csdl|res://*/Models.StormDB.ssdl|res://*/Models.StormDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=10.10.10.43;Initial Catalog=StormDB;Persist Security Info=True;User ID=admin;Password=storm2020;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <add name="StormDBEntities" connectionString="metadata=res://*/Models.StormDB.csdl|res://*/Models.StormDB.ssdl|res://*/Models.StormDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=10.10.10.43;Initial Catalog=StormDB_New;Persist Security Info=True;User ID=admin;Password=storm2020;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   -->
 
   <connectionStrings>
