--- a/StormWeb/StormWeb.csproj
+++ b/StormWeb/StormWeb.csproj
@@ -13,7 +13,7 @@
     <RootNamespace>StormWeb</RootNamespace>
     <AssemblyName>StormWeb</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <MvcBuildViews>false</MvcBuildViews>
+    <MvcBuildViews>true</MvcBuildViews>
     <UseIISExpress>false</UseIISExpress>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -135,6 +135,7 @@
     <Compile Include="Helper\ValidationHelper.cs" />
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\ActivateAccountModel.cs" />
+    <Compile Include="Models\ApplicationDocumentViewModel.cs" />
     <Compile Include="Models\AppointmentMD.cs" />
     <Compile Include="Models\BranchModel.cs" />
     <Compile Include="Models\CalendarEvent.cs" />
@@ -178,6 +179,15 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="bin\AWS.Extensions.dll" />
+    <Content Include="bin\AWSSDK.dll" />
+    <Content Include="bin\AWSSDK.xml" />
+    <Content Include="bin\EntityFramework.dll" />
+    <Content Include="bin\EntityFramework.xml" />
+    <Content Include="bin\Newtonsoft.Json.dll" />
+    <Content Include="bin\Newtonsoft.Json.xml" />
+    <Content Include="bin\StormWeb.dll" />
+    <Content Include="bin\StormWeb.pdb" />
     <Content Include="Content\help_img\AppSummary_StartNew.png" />
     <Content Include="Content\help_img\BookApp.png" />
     <Content Include="Content\help_img\Confirm.png" />
@@ -404,6 +414,7 @@
     <Content Include="Scripts\fullcalendar.js" />
     <Content Include="Scripts\inputmask.jquery.js" />
     <Content Include="Scripts\ios-orientationchange-fix.js" />
+    <Content Include="Scripts\jconfirmaction.jquery.js" />
     <Content Include="Scripts\jquery-1.5.1.min.js" />
     <Content Include="Scripts\jquery-dynamic-form.js" />
     <Content Include="Scripts\jquery-ui-1.8.16.custom.min.js" />
@@ -446,6 +457,7 @@
     <Content Include="Scripts\plupupload\plupload.silverlight.xap" />
     <Content Include="Scripts\prettify.js" />
     <Content Include="Scripts\raty.jquery.js" />
+    <Content Include="Scripts\sliding.form.js" />
     <Content Include="Scripts\smart-wizard.jquery.js" />
     <Content Include="Scripts\sticky.full.js" />
     <Content Include="Scripts\TableTools.min.js" />
@@ -607,6 +619,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\Downloads\" />
+    <Folder Include="Content\img\confirm\" />
     <Folder Include="obj\Debug\edmxResourcesToEmbed\Models\" />
     <Folder Include="obj\Debug\TempPE\" />
     <Folder Include="Reports\" />
@@ -776,7 +789,7 @@
     <Content Include="Views\StudentCentre\AddWorkExperiance.cshtml" />
     <Content Include="Views\Document\ShowGeneralTemplates.cshtml" />
     <Content Include="Views\Event\Index.cshtml" />
-    <Content Include="Views\Document\UploadOfferLetter.cshtml" />
+    <Content Include="Views\Document\UploadApplicationResult.cshtml" />
     <Content Include="Views\Document\StudentDetailsCompleted.cshtml" />
     <Content Include="Views\Report\Index.cshtml" />
     <Content Include="Views\Report\RunReport.cshtml" />
@@ -799,6 +812,8 @@
     </EntityDeploy>
     <Content Include="Views\Document\Partial_StepOne.cshtml" />
     <Content Include="Views\Event\Details.cshtml" />
+    <Content Include="Views\Client\Delete.cshtml" />
+    <Content Include="Views\Document\Partial\_DocumentStep.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
