New edmx for courseLevel table change

--- a/StormWeb/Web.config
+++ b/StormWeb/Web.config
@@ -74,9 +74,7 @@
     <customErrors defaultRedirect="GenericError.htm" mode="Off">
       <error statusCode="404" redirect="/Errors/Error404" />
     </customErrors>
-    <globalization
-        culture="en-AU"
-      />
+    <globalization culture="en-AU" />
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
