--- a/StormWeb/StormWeb.csproj
+++ b/StormWeb/StormWeb.csproj
@@ -273,6 +273,13 @@
   <ItemGroup>
     <Content Include="Content\css\flexslider.css" />
     <Content Include="Content\css\images\bg_direction_nav.png" />
+    <Content Include="Content\img\aserisk.gif" />
+    <Content Include="Content\img\asterisk.gif" />
+    <Content Include="Content\img\edu_aus-green.png" />
+    <Content Include="Content\img\error.png" />
+    <Content Include="Content\img\pattern-green.png" />
+    <Content Include="Content\img\pattern.png" />
+    <Content Include="Content\img\textured_stripes.png" />
     <Content Include="Report\ReportType.xml">
       <SubType>Designer</SubType>
     </Content>
@@ -499,6 +506,7 @@
     <Content Include="Scripts\elfinder\elfinder.min.js" />
     <Content Include="Scripts\excanvas.min.js" />
     <Content Include="Scripts\fullcalendar.js" />
+    <Content Include="Scripts\gcal.js" />
     <Content Include="Scripts\inputmask.jquery.js" />
     <Content Include="Scripts\ios-orientationchange-fix.js" />
     <Content Include="Scripts\jconfirmaction.jquery.js" />
@@ -511,6 +519,7 @@
     <Content Include="Scripts\jquery.colorbox-min.js" />
     <Content Include="Scripts\jquery.easing.1.3.js" />
     <Content Include="Scripts\jquery.flexslider-min.js" />
+    <Content Include="Scripts\jquery.flot.js" />
     <Content Include="Scripts\jquery.jqplot.min.js" />
     <Content Include="Scripts\jquery.jqprint-0.3.js" />
     <Content Include="Scripts\jquery.js" />
@@ -932,6 +941,9 @@
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>StormDB.Designer.cs</LastGenOutput>
     </EntityDeploy>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Content\img\Thumbs.db" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
