--- a/StormWeb/StormWeb.csproj
+++ b/StormWeb/StormWeb.csproj
@@ -38,6 +38,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>lib\AWSSDK.dll</HintPath>
     </Reference>
+    <Reference Include="Clockwork">
+      <HintPath>..\packages\Clockwork.1.1\lib\Clockwork.dll</HintPath>
+    </Reference>
     <Reference Include="EntityFramework">
       <HintPath>..\packages\EntityFramework.4.1.10331.0\lib\EntityFramework.dll</HintPath>
     </Reference>
@@ -47,6 +50,9 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.Data.Schema, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+    <Reference Include="MVC Foolproof Validation">
+      <HintPath>..\packages\foolproof.0.9.4517\lib\MVC Foolproof Validation.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>lib\net40\Newtonsoft.Json.dll</HintPath>
@@ -81,14 +87,17 @@
     <Compile Include="Controllers\AdvertisementController.cs" />
     <Compile Include="Controllers\ApplicationController.cs" />
     <Compile Include="Controllers\AppointmentController.cs" />
+    <Compile Include="Controllers\AssociateCentreController.cs" />
     <Compile Include="Controllers\AssociateController.cs" />
     <Compile Include="Controllers\BranchController.cs" />
     <Compile Include="Controllers\CaseController.cs" />
+    <Compile Include="Controllers\ChartController.cs" />
     <Compile Include="Controllers\ClientController.cs" />
     <Compile Include="Controllers\CourseController.cs" />
     <Compile Include="Controllers\DocumentController.cs" />
     <Compile Include="Controllers\ErrorsController.cs" />
     <Compile Include="Controllers\EventController.cs" />
+    <Compile Include="Controllers\FileController.cs" />
     <Compile Include="Controllers\HelpController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\HRController.cs" />
@@ -97,6 +106,8 @@
     <Compile Include="Controllers\MessageController.cs" />
     <Compile Include="Controllers\PaymentController.cs" />
     <Compile Include="Controllers\ReportController.cs" />
+    <Compile Include="Controllers\ResumeController.cs" />
+    <Compile Include="Controllers\ShortMessageController.cs" />
     <Compile Include="Controllers\SiteController.cs" />
     <Compile Include="Controllers\StaffCentreController.cs" />
     <Compile Include="Controllers\StaffController.cs" />
@@ -158,6 +169,7 @@
     <Compile Include="Models\AppointmentMD.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Models\AssociateMD.cs" />
     <Compile Include="Models\BranchModel.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -259,6 +271,7 @@
     <Compile Include="Models\StudentCentreModel.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Models\StudentChartModel.cs" />
     <Compile Include="Models\StudentModel.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -277,6 +290,8 @@
     <Content Include="Content\img\asterisk.gif" />
     <Content Include="Content\img\edu_aus-green.png" />
     <Content Include="Content\img\error.png" />
+    <Content Include="Content\img\logo_side.png" />
+    <Content Include="Content\img\main_loader.gif" />
     <Content Include="Content\img\pattern-green.png" />
     <Content Include="Content\img\pattern.png" />
     <Content Include="Content\img\textured_stripes.png" />
@@ -540,6 +555,9 @@
     <Content Include="Scripts\MicrosoftMvcAjax.js" />
     <Content Include="Scripts\MicrosoftMvcValidation.debug.js" />
     <Content Include="Scripts\MicrosoftMvcValidation.js" />
+    <Content Include="Scripts\mvcfoolproof.unobtrusive.min.js" />
+    <Content Include="Scripts\MvcFoolproofJQueryValidation.min.js" />
+    <Content Include="Scripts\MvcFoolproofValidation.min.js" />
     <Content Include="Scripts\plupload.full.js" />
     <Content Include="Scripts\plupupload\jquery.plupload.queue.js" />
     <Content Include="Scripts\plupupload\jquery.plupload.queue\css\jquery.plupload.queue.css" />
@@ -937,13 +955,23 @@
     <Content Include="Views\Material\DeleteOrder.cshtml" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Content\img\Thumbs.db" />
+    <Content Include="Views\Resume\Index.cshtml" />
+    <Content Include="Views\Resume\Details.cshtml" />
+    <Content Include="Views\Resume\Create.cshtml" />
+    <Content Include="Views\Resume\Edit.cshtml" />
+    <Content Include="Views\Resume\Delete.cshtml" />
+    <Content Include="Views\AssociateCentre\Index.cshtml" />
     <EntityDeploy Include="Models\StormDB.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>StormDB.Designer.cs</LastGenOutput>
     </EntityDeploy>
+    <Content Include="Views\Associate\MAssociate.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Content\img\Thumbs.db" />
+    <Content Include="Views\File\Index.cshtml" />
+    <Content Include="Views\ShortMessage\Index.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
