--- a/StormWeb/StormWeb.csproj
+++ b/StormWeb/StormWeb.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Controllers\HelpController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\HRController.cs" />
+    <Compile Include="Controllers\LeaveController.cs" />
     <Compile Include="Controllers\LogController.cs" />
     <Compile Include="Controllers\MaterialController.cs" />
     <Compile Include="Controllers\MessageController.cs" />
@@ -883,7 +884,6 @@
     <Content Include="Views\StudentCentre\AddStudyServiceDetails.cshtml" />
     <Content Include="Views\StudentCentre\AddWorkExperiance.cshtml" />
     <Content Include="Views\Document\ShowGeneralTemplates.cshtml" />
-    <Content Include="Views\Event\Index.cshtml" />
     <Content Include="Views\Document\UploadApplicationResult.cshtml" />
     <Content Include="Views\Document\StudentDetailsCompleted.cshtml" />
     <Content Include="Views\Report\Index.cshtml" />
@@ -899,7 +899,6 @@
     <Content Include="Views\Client\RegisterContinue.cshtml" />
     <Content Include="Views\Client\Enquire.cshtml" />
     <Content Include="Views\Document\Partial_StepOne.cshtml" />
-    <Content Include="Views\Event\Details.cshtml" />
     <Content Include="Views\Client\Delete.cshtml" />
     <Content Include="Views\Document\Partial\_DocumentStep.cshtml" />
     <Content Include="Views\University\Description.cshtml" />
@@ -962,11 +961,21 @@
     <Content Include="Views\Resume\Edit.cshtml" />
     <Content Include="Views\Resume\Delete.cshtml" />
     <Content Include="Views\AssociateCentre\Index.cshtml" />
+    <Content Include="Views\Associate\MAssociate.cshtml" />
+    <Content Include="Views\Leave\Index.cshtml" />
+    <Content Include="Views\Leave\Create.cshtml" />
+    <Content Include="Views\Leave\Edit.cshtml" />
+    <Content Include="Views\Leave\Delete.cshtml" />
+    <Content Include="Views\Event\Create.cshtml" />
+    <Content Include="Views\Event\Edit.cshtml" />
+    <Content Include="Views\Event\Index.cshtml" />
+    <Content Include="Views\Event\Delete.cshtml" />
+    <Content Include="Views\Event\Partial\_ScrollingEvent.cshtml" />
+    <Content Include="Views\Leave\Details.cshtml" />
     <EntityDeploy Include="Models\StormDB.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>StormDB.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <Content Include="Views\Associate\MAssociate.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Content\img\Thumbs.db" />
