--- a/StormWeb/Web.config
+++ b/StormWeb/Web.config
@@ -21,8 +21,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="ServerEmail" value="storm.notify@gmail.com" />
     <add key="EmailPassword" value="storm2020" />
-    <add key="AWSAccessKey" value="AKIAJBURKH3IEYHWAXJA" />
-    <add key="AWSSecretKey" value="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" />
+    <add key="AWSAccessKey" value="" />
+    <add key="AWSSecretKey" value="" />
     <add key="Clockwork" value="d01d1530be406432735c01a68a8898f405ba66f1" />
     <add key="BucketName" value="stormwebstorage" />
   </appSettings>
